@@ -1384,3 +1384,18 @@
  ;================================================= ~~ LFRR/LFRN/AMSR ~~ ==================================================;
  N048.39.32.140:W002.19.22.003:LFRN AMSR:2000
  N048.17.02.140:W001.59.37.003:LFRN AMSR:2700
+@@ -42492,7 +42182,13 @@
+ N043.49.49.000:E004.38.00.000:LFTW Points VFR:BC
+ N043.39.59.000:E004.35.15.000:LFTW Points VFR:AL
+ N043.40.55.000:E004.12.50.000:LFTW Points VFR:AS
+-N043.57.11.000:E004.25.26.000:LFTW Points VFR:SN
++N043.57.10.000:E004.28.42.000:LFTW Points VFR:CS
++N043.38.39.030:E004.25.56.800:LFTW Points VFR:SG
++N043.41.24.900:E004.32.40.350:LFTW Points VFR:PA
++N043.45.11.900:E004.30.52.400:LFTW Points VFR:BG
++N043.48.54.500:E004.19.42.900:LFTW Points VFR:CZ
++N043.49.53.400:E004.29.50.100:LFTW Points VFR:RD
++N043.45.21.800:E004.16.03.300:LFTW Points VFR:UH
+ ;============================================== ~~ LFMM/LFTZ/Points VFR ~~ ===============================================;
+ N043.09.41.000:E006.37.05.000:LFTZ Points VFR:ET
+ N043.15.50.000:E006.35.34.000:LFTZ Points VFR:EM
